fix: correct misc device tree issues
Signed-off-by: Jose Martins <josemartins90@gmail.com>

--- a/demos/linux+freertos/devicetrees/qemu-aarch64-virt/linux.dts
+++ b/demos/linux+freertos/devicetrees/qemu-aarch64-virt/linux.dts
@@ -24,9 +24,10 @@
 		};
 
 		cpu@2 {
-			reg = <0x2>;
-			compatible = "arm,cortex-a53";
+			compatible = "arm,cortex-a53", "arm,armv8";
 			device_type = "cpu";
+			enable-method = "psci";
+			reg = <0x2>;
 		};
 
 	};
