feat: use bao-linux-drivers as buildroot package for linux ipc
Signed-off-by: Jose Martins <josemartins90@gmail.com>

--- a/guests/linux/buildroot/aarch32.config
+++ b/guests/linux/buildroot/aarch32.config
@@ -5186,3 +5186,6 @@ BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="zImage"
 BR2_LINUX_KERNEL_IMAGE_NAME=""
 
 BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT=y
+
+BR2_PACKAGE_BAO_DRIVERS=y
+BR2_ROOTFS_OVERLAY="$(BAO_DEMOS_BUILDROOT_OVERLAY)"
