--- a/guests/linux/buildroot/riscv32.config
+++ b/guests/linux/buildroot/riscv32.config
@@ -4779,3 +4779,6 @@ BR2_PACKAGE_URANDOM_SCRIPTS=n
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_IMAGE_NAME=""
+
+BR2_PACKAGE_BAO_DRIVERS=y
+BR2_ROOTFS_OVERLAY="$(BAO_DEMOS_BUILDROOT_OVERLAY)"
