feat: add VirtIO demo
Signed-off-by: João Peixoto <joaopeixotooficial@gmail.com>
Signed-off-by: David Cerdeira <davidmcerdeira@gmail.com>

--- a/guests/linux/buildroot/aarch32.config
+++ b/guests/linux/buildroot/aarch32.config
@@ -580,9 +580,8 @@ BR2_GENERATE_LOCALE=""
 # BR2_SYSTEM_ENABLE_NLS is not set
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
-BR2_ROOTFS_OVERLAY=""
 BR2_ROOTFS_PRE_BUILD_SCRIPT=""
-BR2_ROOTFS_POST_BUILD_SCRIPT=""
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BAO_DEMOS_BUILDROOT_POST_BUILD_SCRIPT)"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/qemu/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_DEFCONFIG)"
@@ -1511,11 +1510,7 @@ BR2_PACKAGE_FLASHROM_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PARTED is not set
 # BR2_PACKAGE_PCIUTILS is not set
 # BR2_PACKAGE_PDBG is not set
-# BR2_PACKAGE_PICOCOM is not set
-
-#
-# picotool needs a toolchain w/ C++, threads, gcc >= 4.9
-#
+BR2_PACKAGE_PICOCOM=y
 # BR2_PACKAGE_PIFMRDS is not set
 # BR2_PACKAGE_PIGPIO is not set
 
@@ -3390,7 +3385,7 @@ BR2_PACKAGE_Z3_ARCH_SUPPORTS=y
 # boinc needs a toolchain w/ dynamic library, C++, threads, gcc >= 4.8
 #
 # BR2_PACKAGE_BRCM_PATCHRAM_PLUS is not set
-# BR2_PACKAGE_BRIDGE_UTILS is not set
+BR2_PACKAGE_BRIDGE_UTILS=y
 # BR2_PACKAGE_BWM_NG is not set
 # BR2_PACKAGE_C_ICAP is not set
 # BR2_PACKAGE_CAN_UTILS is not set
@@ -3502,11 +3497,15 @@ BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # iperf needs a toolchain w/ C++
 #
 # BR2_PACKAGE_IPERF3 is not set
-# BR2_PACKAGE_IPROUTE2 is not set
+BR2_PACKAGE_IPROUTE2=y
 # BR2_PACKAGE_IPSET is not set
 # BR2_PACKAGE_IPTABLES is not set
 # BR2_PACKAGE_IPTRAF_NG is not set
-# BR2_PACKAGE_IPUTILS is not set
+BR2_PACKAGE_IPUTILS=y
+BR2_PACKAGE_IPUTILS_ARPING=y
+BR2_PACKAGE_IPUTILS_CLOCKDIFF=y
+BR2_PACKAGE_IPUTILS_PING=y
+BR2_PACKAGE_IPUTILS_TRACEPATH=y
 # BR2_PACKAGE_IRSSI is not set
 # BR2_PACKAGE_IW is not set
 # BR2_PACKAGE_IWD is not set
@@ -4034,7 +4033,7 @@ BR2_TARGET_ROOTFS_EXT2_2r1=y
 # BR2_TARGET_ROOTFS_EXT2_4 is not set
 BR2_TARGET_ROOTFS_EXT2_GEN=2
 BR2_TARGET_ROOTFS_EXT2_LABEL="rootfs"
-BR2_TARGET_ROOTFS_EXT2_SIZE="64M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="100M"
 BR2_TARGET_ROOTFS_EXT2_INODES=0
 BR2_TARGET_ROOTFS_EXT2_INODE_SIZE=256
 BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
