--- a/guests/linux/buildroot/aarch64.config
+++ b/guests/linux/buildroot/aarch64.config
@@ -545,9 +545,8 @@ BR2_GENERATE_LOCALE=""
 # BR2_SYSTEM_ENABLE_NLS is not set
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
-BR2_ROOTFS_OVERLAY=""
 BR2_ROOTFS_PRE_BUILD_SCRIPT=""
-BR2_ROOTFS_POST_BUILD_SCRIPT=""
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BAO_DEMOS_BUILDROOT_POST_BUILD_SCRIPT)"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/qemu/post-image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_DEFCONFIG)"
@@ -1462,11 +1461,7 @@ BR2_PACKAGE_FLASHROM_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PARTED is not set
 # BR2_PACKAGE_PCIUTILS is not set
 # BR2_PACKAGE_PDBG is not set
-# BR2_PACKAGE_PICOCOM is not set
-
-#
-# picotool needs a toolchain w/ C++, threads, gcc >= 4.9
-#
+BR2_PACKAGE_PICOCOM=y
 # BR2_PACKAGE_PIGPIO is not set
 
 #
@@ -3341,7 +3336,7 @@ BR2_PACKAGE_Z3_ARCH_SUPPORTS=y
 # boinc needs a toolchain w/ dynamic library, C++, threads, gcc >= 4.8
 #
 # BR2_PACKAGE_BRCM_PATCHRAM_PLUS is not set
-# BR2_PACKAGE_BRIDGE_UTILS is not set
+BR2_PACKAGE_BRIDGE_UTILS=y
 # BR2_PACKAGE_BWM_NG is not set
 # BR2_PACKAGE_C_ICAP is not set
 # BR2_PACKAGE_CAN_UTILS is not set
@@ -3457,11 +3452,15 @@ BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # iperf needs a toolchain w/ C++
 #
 # BR2_PACKAGE_IPERF3 is not set
-# BR2_PACKAGE_IPROUTE2 is not set
+BR2_PACKAGE_IPROUTE2=y
 # BR2_PACKAGE_IPSET is not set
 # BR2_PACKAGE_IPTABLES is not set
 # BR2_PACKAGE_IPTRAF_NG is not set
-# BR2_PACKAGE_IPUTILS is not set
+BR2_PACKAGE_IPUTILS=y
+BR2_PACKAGE_IPUTILS_ARPING=y
+BR2_PACKAGE_IPUTILS_CLOCKDIFF=y
+BR2_PACKAGE_IPUTILS_PING=y
+BR2_PACKAGE_IPUTILS_TRACEPATH=y
 # BR2_PACKAGE_IRSSI is not set
 # BR2_PACKAGE_IW is not set
 # BR2_PACKAGE_IWD is not set
@@ -3997,7 +3996,7 @@ BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_GEN=4
 BR2_TARGET_ROOTFS_EXT2_LABEL="rootfs"
-BR2_TARGET_ROOTFS_EXT2_SIZE="60M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="130M"
 BR2_TARGET_ROOTFS_EXT2_INODES=0
 BR2_TARGET_ROOTFS_EXT2_INODE_SIZE=256
 BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
